fix text behind image

--- a/css/style.css
+++ b/css/style.css
@@ -25,29 +25,22 @@ nav{
   text-align: center;
 }
 
-.flex-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 img{
+  position: relative;
   border-radius: 100px;
+  z-index: 2;
 }
 
-/* .image{ */
-  /* position: relative; */
-  /* width: 200px; */
-/* } */
+#divpic{
 
-/* .imgDescription{ */
-  /* position: absolute; */
-  /* top: 0; */
-  /* left: 0; */
-  /* width: 100%; */
-  /* height: 100%; */
-  /* background: rgba(0, 0, 0, 0.6); */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-/* } */
+}
+
+.imgDesc{
+  display: flex;
+  flex-direction: column;
+  text-align: inherit;
+  font-size: 1.5em;
+  margin-top: -120px;
+  margin-bottom: 100px;
+  z-index: 0;
+}
